2002-02-25  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-commands.[ch] (gedit_cmd_help_contents): new 
	function

	* gedit-menus.[c]: added HelpContents to gedit_verbs 

2002-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* gedit2.c: Remove unsupported #ifdef ENABLE_NLS stuff.
	
2002-02-23  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.c (gedit_utils_error_reporting_reverting_file):
	report more helpful error messages
 
2002-02-23  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.[ch](gedit_utils_error_reporting_loading_file)
	(gedit_utils_error_reporting_saving_file)
	(gedit_utils_error_reporting_reverting_file): new functions

	* gedit-file.c: use the new functions to report errors

	* gedit-document.c (gedit_document_save_as_real): better
	error reporting

2002-02-22  Federico Mena Quintero  <federico@ximian.com>

	* bonobo-mdi.c: Replace gtk_object_*  with the new
	GObject calls.
	* gedit-mdi.c: Likewise.

2002-02-22  Paolo Maggi  <maggi@athena.polito.it>

	gedit-ui.xml: In menus, all the words (except 'and') should start 
	with a capital letter (That's just the convention for menus)

2002-02-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-mdi.[ch](gedit_mdi_clear_active_window_statusbar):
	new function

	* gedit-file.c (gedit_file_close): call 
	gedit_mdi_clear_active_window_statusbar	
	(gedit_file_close_all): ditto

	* gedit-document.c (gedit_document_get_untitled_number)
	(gedit_document_release_untitled_number): new function
	Now the untitled numbers are assigned in a smarter way

2002-02-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-file.c (gedit_file_new): active view  grabs focus 
	(gedit_file_open_recent): ditto

	* gedit-view.c (gedit_view_finalize): removed really broken
	code I really don't know why I wrote

	* dialogs/plugin-manager.glade2: added support for long text
	in the notebook pages

2002-02-21  Paolo Maggi  <maggi@athena.polito.it>

	Name changed: gedit2->gedit

	* gedit-ui.xml: removed Tools menu
