@@ -1,5 +1,13 @@
 2002-02-25  Paolo Maggi  <maggi@athena.polito.it>
 
+	* dialogs/gedit-preferences-dialog.c
+	(gedit_preferences_dialog_auto_save_checkbutton_toggled):
+	new function
+	(gedit_preferences_dialog_setup_save_page): connect "toggled"
+	signal of the auto save checkbutton
+
+2002-02-25  Paolo Maggi  <maggi@athena.polito.it>
+
 	* gedit-commands.[ch] (gedit_cmd_help_contents): new 
 	function
 
